Changing fontsize to ensure media query works on small devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,7 +148,7 @@ table {
   }
 
   .cell {
-    font-size: 18pt;
+    font-size: 16pt;
   }
 
   #player-selection {
